@@ -37,6 +37,18 @@ import org.slf4j.LoggerFactory;
 import java.util.List;
 import java.util.Map;
 
+/**
+ * Converts a vector representation of documents into a {@code document x term} matrix.
+ * The input data is in {@code SequenceFile<Text,VectorWritable>} format (as generated by 
+ * {@link org.apache.mahout.vectorizer.SparseVectorsFromSequenceFiles SparseVectorsFromSequenceFiles}
+ * or by {@link org.apache.mahout.vectorizer.EncodedVectorsFromSequenceFiles EncodedVectorsFromSequenceFiles})
+ * and generates the following two files as output:
+ * <ul><li>A file called "matrix" in {@code SequenceFile<IntWritable,VectorWritable>} format.</li>
+ * <li>A file called "docIndex" in {@code SequenceFile<IntWritable,Text>} format.</li></ul>
+ * The input file is the join of the two output files on the generated int key. 
+ * In other words, {@code RowIdJob} replaces the document text ids by integers.
+ * The original document text ids can still be retrieved from the "docIndex".
+ */
 public class RowIdJob extends AbstractJob {
   private static final Logger log = LoggerFactory.getLogger(RowIdJob.class);
 
